# challenger-rs

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  typos.toml
.github/workflows/: release.docker.yml  release.yml  tests.yml
abi/: Scribe.json  ScribeOptimistic.json
challenger/: Cargo.toml
challenger/src/: contract.rs  lib.rs  metrics.rs
challenger/tests/: challenger_logic_test.rs
challenger_old/: Cargo.toml
challenger_old/src/: contract.rs
charts/challenger/: Chart.yaml  README.md  values.yaml
charts/challenger/templates/: NOTES.txt  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
crates/scribe/: Cargo.toml
crates/scribe/abi/: ScribeOptimistic.json
crates/scribe/src/: contract.rs  deployment.rs  error.rs  event.rs  event_handler.rs  event_processor.rs  events_handler.rs  events_listener.rs  events_poller.rs  lib.rs  metrics.rs  provider.rs
src/: challenger.rs  main.rs  wallet.rs
src/challenger/: contract.rs  provider.rs
tests/: integration_test.rs
tests/fixtures/bytecode/: ScribeOptimistic.json
