[package]
name = "challenger"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
scribe = { path = "./crates/scribe" }
log = { version = "0.4.20", features = ["kv"] }
env_logger = "0.11.3"
eyre = "0.6.8"

tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.12"

alloy = { version = "0.9.2", features = ["full", "signer-keystore", "node-bindings"] }

metrics-process = "2.4.0"
metrics-exporter-prometheus = { version = "0.16.1", features = [
    "http-listener",
] }
metrics = "0.24.1"

[dependencies]
scribe = {workspace = true}
alloy = { workspace = true, features = ["full", "signer-keystore"] }
env_logger = { workspace = true }
log = { workspace = true, features = ["kv"] }
eyre = { workspace = true }

tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }

metrics-process = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

clap = { version = "4.3.21", features = ["derive", "env"] }
rpassword = "7.2.0"
chrono = "0.4.38"
futures-util = "0.3.31"
testing_logger = "0.1.1"
