[package]
name = "challenger"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
scribe = { path = "./crates/scribe" }
alloy = { version = "1.0", features = ["full", "signer-keystore", "node-bindings", "rpc-types-mev"] }
chrono = "0.4.38"
env_logger = "0.11.3"
eyre = "0.6.8"
log = { version = "0.4.20", features = ["kv"] }
metrics = "0.24.1"
metrics-exporter-prometheus = { version = "0.16.1", features = [
    "http-listener",
] }
metrics-process = "2.4.0"
mockall = "0.13.1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.12"
thiserror = "2.0.11"
serde_json = "1.0.138"

[dependencies]
scribe = { workspace = true }

alloy = { workspace = true, features = ["full", "signer-keystore", "getrandom"] }
chrono = { workspace = true }
env_logger = { workspace = true }
eyre = { workspace = true }
log = { workspace = true, features = ["kv"] }
metrics-exporter-prometheus = { workspace = true }
metrics-process = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }

clap = { version = "4.3.21", features = ["derive", "env"] }
rpassword = "7.2.0"
futures-util = "0.3.31"
testing_logger = "0.1.1"
