[package]
name = "challenger-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "2.0"
tokio = { version = "1", features = ["full"] }
hex-literal = "0.4.1"
env_logger = "0.10.0"
futures = "0.3.28"
eyre = "0.6.8"
clap = { version = "4.3.21", features = ["derive", "env"] }
log = "0.4.20"
hex = "0.4.3"
chrono = "0.4.26"
rpassword = "7.2.0"
lazy_static = "1.4.0"
tokio-util = "0.7.9"
async-trait = "0.1.73"

[dev-dependencies]
mockall = "0.11.2"