[package]
name = "scribe"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { workspace = true, features = ["full"] }
chrono = { workspace = true }
eyre = { workspace = true }
log = { workspace = true }
metrics = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
